#9 added missing XMLNode methods; fixed link error in toc; tagged migrated md files with so.yml: 1 in frontmatter

--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -109,3 +109,9 @@ references:
   name: Vector
   nameWithType: Vector
   fullName: CRMScript.Global.Vector
+- uid: CRMScript.Global.XMLNode
+  commentId: T:CRMScript.Global.XMLNode
+  isExternal: true
+  name: XMLNode
+  nameWithType: XMLNode
+  fullName: CRMScript.Global.XMLNode
