--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -32,6 +32,6 @@ items:
   - name: Void
     href: CRMScript.Global.Void.yml
   - name: XMLNode
-    href: CRMScript.Global.Vector.yml
+    href: CRMScript.Global.XMLNode.yml
 - name: CRMScript.Event
   href: CRMScript.Event.yml
