#9 updated from latest successful automation build

--- a/docs/api-reference/new/CRMScript.NetServer.yml
+++ b/docs/api-reference/new/CRMScript.NetServer.yml
@@ -1,7 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer
-  commentId: N:CRMScript.NetServer
+  commentId: T:CRMScript.NetServer
   id: CRMScript.NetServer
   langs:
   - crmscript
@@ -1011,7 +1011,7 @@ references:
   isExternal: true
   name: NSContactActivity
   nameWithType: NSContactActivity
-  fullName: CRMScript.NetServer.NSContactActivity 
+  fullName: CRMScript.NetServer.NSContactActivity
 - uid: CRMScript.NetServer.NSContactActivityList
   commentId: T:CRMScript.NetServer.NSContactActivityList
   isExternal: true
