#9 Added parsed trigger files

--- a/docs/api-reference/new/CRMScript.Event.yml
+++ b/docs/api-reference/new/CRMScript.Event.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.Event.Trigger
   name: CRMScript.Event
   nameWithType: CRMScript.Event
   fullName: CRMScript.Event
@@ -17,3 +18,9 @@ references:
   name: CRMScript.Event
   nameWithType: CRMScript.Event
   fullName: CRMScript.Event
+- uid: CRMScript.Event.Trigger
+  commentId: T:CRMScript.Event.Trigger
+  isExternal: true
+  name: Trigger
+  nameWithType: Trigger
+  fullName: CRMScript.Event.Trigger
