--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -1040,8 +1040,11 @@ items:
     href: CRMScript.NetServer.NSAAAMockAgent.yml
   - name: NSAAATestClassForModeling
     href: CRMScript.NetServer.NSAAATestClassForModeling.yml
-- name: Trigger scripts
-  href: CRMScript.Events.yml
+- name: Trigger scripts)
+  href: CRMScript.Event.yml
+  items:
+  - name: Trigger
+    href: CRMScript.Event.Trigger.yml
 - name: Classes (native)
   href: CRMScript.Native.yml
   items:
