--- a/docs/api-reference/CRMScript.Native.Category.yml
+++ b/docs/api-reference/CRMScript.Native.Category.yml
@@ -3,11 +3,10 @@ items:
 - uid: CRMScript.Native.Category
   commentId: T:CRMScript.Native.Category
   id: Category
-  so.intellisense: Void.Category
   langs:
   - crmscript
   children:
-  - CRMScript.Native.Category.#ctor()
+  - CRMScript.Native.Category.#ctor
   - CRMScript.Native.Category.getValue(String)
   - CRMScript.Native.Category.load(Integer)
   - CRMScript.Native.Category.save()
@@ -16,25 +15,24 @@ items:
   nameWithType: Category
   fullName: CRMScript.Native.Category
   type: Class
-  summary: "\nClass used for accessing and changing a ticket category.\n"
+  summary: "\nFor accessing and changing a ticket category.\n"
   example: 
-  - "\n<pre><code>Category c;\n\nc.load(2); //Loads category with id = 2\nprint(c.getValue(&quot;notificationEmail&quot;));\nc.setValue(&quot;name&quot;, &quot;Bob&quot;);</code></pre>\n"
-- uid: CRMScript.Native.Category.#ctor()
-  commentId: M:CRMScript.Native.Category.#ctor()
-  id: '#ctor()'
+  - "\n<pre><code>Category c;\n\nc.load(2); //Loads category with ID = 2\nprint(c.getValue(&quot;notificationEmail&quot;));\nc.setValue(&quot;name&quot;, &quot;Bob&quot;);</code></pre>\n"
+- uid: CRMScript.Native.Category.#ctor
+  commentId: M:CRMScript.Native.Category.#ctor
+  id: '#ctor'
   so.intellisense: Void.Category
   langs:
   - crmscript
-  name: '#ctor()'
-  nameWithType: Category.#ctor()
-  fullName: CRMScript.Native.Category.#ctor()
+  name: '#ctor'
+  nameWithType: Category.#ctor
+  fullName: CRMScript.Native.Category.#ctor
   type: Constructor
-  summary: "\nClass used for accessing and changing a ticket category.\n"
+  summary: "\nInitializes a new instance of the Category class.\n"
   remarks: 
   syntax: 
     content: Category
   example: 
-  - "\n<pre><code>Category c;\n\nc.load(2); //Loads category with id = 2\nprint(c.getValue(&quot;notificationEmail&quot;));\nc.setValue(&quot;name&quot;, &quot;Bob&quot;);</code></pre>\n"
 - uid: CRMScript.Native.Category.getValue(String)
   commentId: M:CRMScript.Native.Category.getValue(String)
   id: 'getValue(String)'
@@ -46,15 +44,18 @@ items:
   fullName: CRMScript.Native.Category.getValue(String)
   type: Method
   summary: "\nRetrieves the value of the given field in the category.\n"
-  remarks: 
+  remarks: "\nAvailable fields: id: The ID of the category; parent: The ID of the parent category; name: The name of the category; fullname: The full name of the category (such as &quot;Support/Product A/bugs&quot;); externalName: The external name of the category; categoryMaster: The ID of the category master; children: A comma separated list of children IDs; notificationEmail: The value of the email Notification field\n"
   syntax: 
-    content: getValue(String field)
+    content: String getValue(String field)
     parameters:
     - id: field
       type: CRMScript.Global.String
-      description: 
+      description: The field to get.
+    return:
+      type: CRMScript.Global.String
+      description: The value of the specified field.
   example: 
-  - "\n<pre><code>Category c;\n\nc.load(2);</code></pre>\n"
+  - "\n<pre><code>Category c;\n\nc.load(2);\nprint(c.getValue(&quot;notificationEmail&quot;))</code></pre>\n"
 - uid: CRMScript.Native.Category.load(Integer)
   commentId: M:CRMScript.Native.Category.load(Integer)
   id: 'load(Integer)'
@@ -65,14 +66,17 @@ items:
   nameWithType: Category.load(Integer)
   fullName: CRMScript.Native.Category.load(Integer)
   type: Method
-  summary: "\nLoad object with values from category with given id.\n"
+  summary: "\nLoad object with values from category with given ID.\n"
   remarks: 
   syntax: 
-    content: load(Integer id)
+    content: Bool load(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the category to load.
+    return:
+      type: CRMScript.Global.Bool
+      descending: true if the category exists; otherwise, false.
   example: 
   - "\n<pre><code>Category c;\n\nc.load(2);\nprint(c.getValue(&quot;name&quot;));</code></pre>\n"
 - uid: CRMScript.Native.Category.save()
@@ -85,11 +89,14 @@ items:
   nameWithType: Category.save()
   fullName: CRMScript.Native.Category.save()
   type: Method
-  summary: "\nSaves the category and returns its id.<p></p>\nReturns the id of the saved category.\n"
+  summary: "\nSaves the category and returns its ID.\n"
   remarks: 
   syntax: 
-    content: save()
-    parameters:
+    content: Integer save()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the saved category.
   example: 
 - uid: CRMScript.Native.Category.setValue(String,String)
   commentId: M:CRMScript.Native.Category.setValue(String,String)
@@ -102,16 +109,16 @@ items:
   fullName: CRMScript.Native.Category.setValue(String,String)
   type: Method
   summary: "\nSets the value of the given field for the category.\n"
-  remarks: 
+  remarks: "\nAvailable fields: parent: The ID of the parent category; name: The name of the category; externalName: The external name of the category; categoryMaster: The ID of the category master; children: A comma separated list of children IDs; notificationEmail: The value of the email Notification field\n"
   syntax: 
     content: setValue(String name, String value)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The field to set.
     - id: value
       type: CRMScript.Global.String
-      description: 
+      description: The value to set.
   example: 
   - "\n<pre><code>Category c;\n\nc.load(2);\nc.setValue(&quot;name&quot;, &quot;Test&quot;);</code></pre>\n"
 references:
@@ -133,3 +140,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Bool
+  commentId: T:CRMScript.Global.Bool
+  isExternal: true
+  name: Bool
+  nameWithType: Bool
+  fullName: CRMScript.Global.Bool
